--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -27,6 +27,7 @@
                     <input type="hidden" name="id" value="{{.ID}}">
                     <button type="submit">DELETE</button>
                 </form>
+                <a href="/wishlist/{{.ID}}/edit">Edit</a>
         </li>
     {{end}}
     </ul>
