feat: add initial barebones users support with mock data

--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -13,7 +13,11 @@
                 <label for="url">Link:</label>
                 <input type="url" id="url" name="url" placeholder="https://example.com">
                 <label for="user">User:</label>
-                <input type="text" id="user" name="user">
+                <select name="user" id="users">
+                {{range .Users}}
+                    <option value="{{.ID}}">{{.Name}}</option>
+                {{end}}
+                </select>
                 <input type="submit" value="Submit">
             </form>
         </div>
@@ -21,7 +25,7 @@
     <ul>
     {{range .WishlistItems}}
         <li>
-            <strong>{{.ItemName}}</strong> - ${{.Price}}
+            <strong>{{.ItemName}}</strong> - ${{.Price}} - {{.UserName}}
             <br><a href="{{.Url}}" target="_blank" rel="noopener noreferrer">{{.Url}}</a>
                 <form method="POST" action="/wishlist/{{.ID}}/delete">
                     <input type="hidden" name="id" value="{{.ID}}">
