--- a/templates/edititem.tmpl
+++ b/templates/edititem.tmpl
@@ -11,9 +11,13 @@
                 <label for="price">Price:</label>
                 <input type="number" id="price" name="price" value={{.WishlistItem.Price}} min="0" max="10000000" step="0.01">
                 <label for="url">Link:</label>
-                <input type="url" id="url" name="url" value={{.WishlistItem.Url}}>
+                <input type="text" id="url" name="url" value={{.WishlistItem.Url}} placeholder="https://example.com">
                 <label for="user">User:</label>
-                <input type="text" id="user" name="user" value={{.WishlistItem.UserId}}>
+                <select name="user" id="user">
+                    {{range .Users}}
+                        <option value="{{.ID}}" {{if eq .ID $.WishlistItem.UserId}}selected{{end}}>{{.Name}}</option>
+                    {{end}}
+                </select>
                 <input type="submit" value="Submit">
             </form>
         </div>
