--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -10,6 +10,7 @@
   <div class="flex-1">
     <a href="/" class="btn btn-ghost text-xl">{{.PageTitle}}</a>
   </div>
+  <a href="/user">Add user</a>
 </div>
 </header>
 <body>
