--- a/templates/edititem.tmpl
+++ b/templates/edititem.tmpl
@@ -19,6 +19,8 @@
       <input type="text" id="itemname" name="itemname" value={{.WishlistItem.ItemName}} class="input w-52" required minlength="1" maxlength="100">
       <label for="price">Price:</label>
       <input type="number" id="price" name="price" value={{.WishlistItem.Price}} class="input w-20" min="0" max="10000000" step="0.01">
+      <label for="note">Note:</label>
+      <input type="note" id="note" name="note"  value={{.WishlistItem.Note}} class="input" placeholder="Leave a note...">
       <label for="url">Link:</label>
       <input type="text" id="url" name="url" value={{.WishlistItem.Url}} class="input" placeholder="https://example.com">
       <label for="user">User:</label>
