--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -22,6 +22,8 @@
       <input type="number" id="price" name="price" class="input w-20" value="0.00" min="0" max="10000000" step="0.01">
       <label for="url">Link:</label>
       <input type="url" id="url" name="url" class="input" placeholder="https://example.com">
+      <label for="note">Note:</label>
+      <input type="note" id="note" name="note" class="input" placeholder="Leave a note...">
       <label for="user">User:</label>
       <select name="user" id="users" class="select w-36">
       {{range .Users}}
@@ -49,6 +51,8 @@
           <span class="text-xs">{{slice .UserName 0 1}}</span>
         </div>
       </h2>
+
+      <p>{{.Note}}</p>
       <div class="card-actions justify-center">
         <a href="{{.Url}}" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Buy now</a>
         <a href="/wishlist/{{.ID}}/edit" class="btn btn-primary">Edit</a>
