--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -4,6 +4,15 @@
     <title><a href="/">{{.PageTitle}}</a></title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <style>
+        .stars {
+            color: #ffd700;
+            font-size: 1.2em;
+        }
+        .stars .empty {
+            color: #ddd;
+        }
+    </style>
 </head>
 <header> 
 <div class="navbar bg-base-100 shadow-sm mb-4">
@@ -24,6 +33,14 @@
       <input type="url" id="url" name="url" class="input" placeholder="https://example.com">
       <label for="note">Note:</label>
       <input type="note" id="note" name="note" class="input" placeholder="Leave a note...">
+      <label for="priority">Priority</label>
+      <select name="priority" id="priority" class="select w-18">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3" selected>3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select>
       <label for="user">User:</label>
       <select name="user" id="users" class="select w-36">
       {{range .Users}}
@@ -50,6 +67,14 @@
         <div class="bg-neutral text-neutral-content w-8 rounded-full">
           <span class="text-xs">{{slice .UserName 0 1}}</span>
         </div>
+        </div>
+        <div class="stars">
+          {{if eq .Priority 1}}★☆☆☆☆{{end}}
+          {{if eq .Priority 2}}★★☆☆☆{{end}}
+          {{if eq .Priority 3}}★★★☆☆{{end}}
+          {{if eq .Priority 4}}★★★★☆{{end}}
+          {{if eq .Priority 5}}★★★★★{{end}}
+        </div>
       </h2>
 
       <p>{{.Note}}</p>
@@ -66,6 +91,6 @@
     </div>
     </li>
   {{end}}
-  </ul>
+  </div>
 </body>
 </html>
